# votebot

./: .env.example  .gitignore  LICENSE  PLAN-bill-enrichment.md  PLAN-large-pdf-memory-management.md  PLAN-member-organizations.md  PLAN-streaming-slack-handoff.md  README.md  eval_report_2026-02-10.json  middleware.py  primitives.md  pyproject.toml  requirements.txt
RAG training docs/: Digital Democracy Project overview 24 Jan 2026.txt  VoteBot Agent Instructions.txt  website_pages.txt
chat-widget/: README.md  build.js  index.html  nginx.conf  package.json  test-page2.html  test-page3.html  test.html
chat-widget-poc/: README.md  index.html  server.py
config/: sync_schedule.yaml
docs/: RAG_ARCHITECTURE.md  TROUBLESHOOTING.md
feedback/: User Analytics Logging feedback 2.md  User Analytics Logging feedback 3.md  User Analytics Logging feedback 4.md  User Analytics Logging feedback.md
plans/: PLAN-ddp-sync-phase1.md  PLAN-ddp-sync-phase2.md  PLAN-ddp-sync-phase3.md  PLAN-ddp-sync-phase4.md  PLAN-ddp-sync-phase5.md  PLAN-ddp-sync-phase6.md  PLAN-ddp-sync-phase7.md  PLAN-ddp-sync-phase8.md  PLAN-eval-and-cache-hit-logging.md  PLAN-jigsaw-overview.md  PLAN-jigsaw-stage-a.md  PLAN-jigsaw-stage-b.md  PLAN-jigsaw-stage-c.md  PLAN-jigsaw-stage-d.md  PLAN-jigsaw-stage-e.md  PLAN-log-quality-fixes.md  PLAN-move-sync-to-own-service.md  PLAN-polis-math-pipeline.md  PLAN-quick-action-buttons.md  PLAN-user-personalization.md  PLAN-votebot-polis-jigsaw.md  bill-enrichment.md  large-pdf-memory-management.md  member-organizations.md  streaming-slack-handoff.md  user-analytics-logging.md
research/: Literature-Review-Quantifying-Voter-Opinions.md  Research-Quantifying-Voter-Opinions.md  voter_opinion_literature_review.md  voter_opinion_literature_review_cited.md
scripts/: backload_openstates.py  deploy_fix_f.sh  evaluate_production.py  flush_bill_history.py  ingest.py  (+22 more)
(+99 files in other folders)
