[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "votebot"
version = "2.0.0"
description = "High-performance, context-aware VoteBot API for Digital Democracy Project"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Digital Democracy Project"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.10.0",
    "pinecone>=3.0.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "tiktoken>=0.5.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "locust>=2.20.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

[project.scripts]
votebot = "votebot.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/votebot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
